# rag_zotero

./: .env.example  .gitignore  README.md  pyproject.toml
codex_skills/rag-zotero/: SKILL.md
codex_skills/rag-zotero/scripts/: query_json.sh  scan_json.sh
rag_zotero/: cli.py  config.py  embeddings.py  extract.py  indexer.py  llm_eval.py  text_chunking.py  vectorstore.py  zotero_export.py  zotero_scan.py
tests/: test_metadata_sanitize.py  test_zotero_export.py
